--- a/style.css
+++ b/style.css
@@ -16,5 +16,27 @@ input {
 }
 
 div {
-  height: 100vh;
+  /* height: 60vh; */
+}
+
+.ifc-property-menu {
+  border: 1px solid gray;
+  /* width: 20rem; */
+  position: absolute;
+  background-color: white;
+}
+
+.ifc-property-item {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 0.5rem;
+  border-bottom: solid 1px gray;
+  /* height: fit-content; */
+}
+
+.ifc-property-value {
+  width: 100%;
+  text-align: right;
+  /* height: 35px; */
 }
