--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ ul,
   margin-left: 10px;
 }
 
+.text-container {
+  display: flex;
+}
+
 .viewer-container {
   position: relative;
   height: 100vh;
